Updating configuration; Authentication

--- a/Webshop.API/appsettings.json
+++ b/Webshop.API/appsettings.json
@@ -7,6 +7,11 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=webshop.db;"
+    "DefaultConnection":"Data/ShopDatabase.db"
+  },
+  "Jwt": {
+    "Key": "s=?B'%`a|m5]pD`7@['e@5<ioy]rt#.rjBSo{%ZbDj/R$AuLeC8#aDa{1MUpLIk",
+    "Issuer": "localhost",
+    "Audience": "localhost"
   }
 }
